# clockperf

./: .gitignore  CMakeLists.txt  COPYING  GNUmakefile  README.md  affinity.c  affinity.h  clock.c  clock.h  clockperf.c  drift.c  drift.h  main.c  meson.build  platform.h  prefix.h  tscemu.c  tscemu.h  util.c  util.h  version.c  version.h  winapi.c  winapi.h
.github/: install-fedora.sh  install-post.sh  install-ubuntu.sh  script.sh
.github/workflows/: build.yml
getopt/: getopt.h  getopt_long.c
tools/: build.pl  license.pl
